// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterWallets should render 1`] = `
<div>
  <div
    class="flex flex-col text-left"
    data-testid="FilterWallets"
  >
    <div
      class="mb-5"
    >
      <div
        class="font-semibold text-theme-secondary-text"
      >
        Filter Networks
      </div>
      <div
        class="mt-1 text-sm text-theme-secondary-500"
      >
        Select the networks to show.
      </div>
    </div>
    <div
      class="space-y-4"
    />
    <div
      class="mt-6 mb-8 border-t border-dotted border-theme-secondary-300 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-between items-center"
      >
        <div
          class="font-semibold text-theme-secondary-text"
        >
          Your Wallets
        </div>
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex justify-end items-center cursor-pointer text-theme-secondary-text"
              data-testid="filter-wallets__wallets"
            >
              <span
                class="inline-block mr-2 font-semibold"
              />
              <div
                class="sc-bdfBwQ ijcmGk transition-transform "
                height="5"
                width="8"
              >
                <svg>
                  chevron-down.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-secondary-500"
      >
        Select which wallets to view.
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterWallets should render with networks selection 1`] = `
<div>
  <div
    class="flex flex-col text-left"
    data-testid="FilterWallets"
  >
    <div
      class="mb-5"
    >
      <div
        class="font-semibold text-theme-secondary-text"
      >
        Filter Networks
      </div>
      <div
        class="mt-1 text-sm text-theme-secondary-500"
      >
        Select the networks to show.
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        data-testid="FilterNetwork"
      >
        <div
          class="mb-3 text-sm font-bold text-theme-secondary-400"
        >
          Public Networks
        </div>
        <ul
          class="flex flex-wrap"
          data-testid="NetworkOptions"
        >
          <li
            class="inline-block pr-5 pb-5 cursor-pointer"
            data-testid="NetworkOption__ARK"
          >
            <div
              class="Circle__CircleWrapper-uw7h4j-0 bNDQMV relative border-theme-secondary-300 text-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background"
            >
              <div
                class="sc-bdfBwQ hjDozt"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
              <span
                class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                <span />
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="mt-6 mb-8 border-t border-dotted border-theme-secondary-300 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-between items-center"
      >
        <div
          class="font-semibold text-theme-secondary-text"
        >
          Your Wallets
        </div>
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex justify-end items-center cursor-pointer text-theme-secondary-text"
              data-testid="filter-wallets__wallets"
            >
              <span
                class="inline-block mr-2 font-semibold"
              />
              <div
                class="sc-bdfBwQ ijcmGk transition-transform "
                height="5"
                width="8"
              >
                <svg>
                  chevron-down.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-secondary-500"
      >
        Select which wallets to view.
      </div>
    </div>
  </div>
</div>
`;
